[gd_scene load_steps=22 format=3 uid="uid://c8u8wtc2ums0r"]

[ext_resource type="Script" path="res://src/Characters/Party/Character.gd" id="1_480s5"]
[ext_resource type="Texture2D" uid="uid://enrpllqktj74" path="res://icon.svg" id="3_1av1x"]
[ext_resource type="Resource" uid="uid://cpvyno5xcius7" path="res://src/Characters/Party/test_character_skills.tres" id="3_tv1nx"]
[ext_resource type="PackedScene" uid="uid://c8o2451dm4exo" path="res://src/Characters/Party/character_controller.tscn" id="4_0ki5f"]
[ext_resource type="Resource" uid="uid://dhj75dt7b8w2t" path="res://src/Characters/Party/CharactersStats/Test_stats.tres" id="4_6x02c"]

[sub_resource type="CylinderMesh" id="CylinderMesh_6njk1"]

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_1shvy"]

[sub_resource type="VisualShaderNodeVectorCompose" id="VisualShaderNodeVectorCompose_3p6i0"]
default_input_values = [0, 0.0, 1, 0.0, 2, 0.0, 3, 0.0]
op_type = 2

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_y7vhy"]
function = 0

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_gihb6"]
function = 12

[sub_resource type="VisualShaderNodeBooleanParameter" id="VisualShaderNodeBooleanParameter_w0gko"]
parameter_name = "IsSelectd"

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_yxerl"]
parameter_name = "Texture2DParameter"

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_62xcg"]
source = 5

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_i3bjv"]
input_name = "time"

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_3e3lh"]
parameter_name = "TimeScale"

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_ubi56"]
operator = 2

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_1kdxs"]
operator = 2

[sub_resource type="VisualShader" id="VisualShader_hfj5k"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx;

uniform sampler2D Texture2DParameter;
uniform float TimeScale;
uniform bool IsSelectd;



void fragment() {
	vec4 n_out3p0;
// Texture2D:3
	n_out3p0 = texture(Texture2DParameter, UV);


// Input:4
	float n_out4p0 = TIME;


// FloatParameter:5
	float n_out5p0 = TimeScale;


// FloatOp:7
	float n_out7p0 = n_out4p0 * n_out5p0;


// BooleanParameter:15
	bool n_out15p0 = IsSelectd;


// FloatOp:8
	float n_out8p0 = n_out7p0 * (n_out15p0 ? 1.0 : 0.0);


// FloatFunc:13
	float n_out13p0 = sin(n_out8p0);


// FloatFunc:14
	float n_out14p0 = abs(n_out13p0);


// VectorCompose:12
	float n_in12p0 = 0.00000;
	float n_in12p1 = 0.00000;
	float n_in12p3 = 0.00000;
	vec4 n_out12p0 = vec4(n_in12p0, n_in12p1, n_out14p0, n_in12p3);


// VectorOp:11
	vec3 n_out11p0 = vec3(n_out3p0.xyz) + vec3(n_out12p0.xyz);


// Output:0
	ALBEDO = n_out11p0;


}
"
nodes/fragment/2/node = SubResource("VisualShaderNodeTexture2DParameter_yxerl")
nodes/fragment/2/position = Vector2(-740, -100)
nodes/fragment/3/node = SubResource("VisualShaderNodeTexture_62xcg")
nodes/fragment/3/position = Vector2(-380, 20)
nodes/fragment/4/node = SubResource("VisualShaderNodeInput_i3bjv")
nodes/fragment/4/position = Vector2(-980, 500)
nodes/fragment/5/node = SubResource("VisualShaderNodeFloatParameter_3e3lh")
nodes/fragment/5/position = Vector2(-980, 580)
nodes/fragment/7/node = SubResource("VisualShaderNodeFloatOp_ubi56")
nodes/fragment/7/position = Vector2(-640, 500)
nodes/fragment/8/node = SubResource("VisualShaderNodeFloatOp_1kdxs")
nodes/fragment/8/position = Vector2(-480, 500)
nodes/fragment/11/node = SubResource("VisualShaderNodeVectorOp_1shvy")
nodes/fragment/11/position = Vector2(240, 200)
nodes/fragment/12/node = SubResource("VisualShaderNodeVectorCompose_3p6i0")
nodes/fragment/12/position = Vector2(40, 360)
nodes/fragment/13/node = SubResource("VisualShaderNodeFloatFunc_y7vhy")
nodes/fragment/13/position = Vector2(-340, 540)
nodes/fragment/14/node = SubResource("VisualShaderNodeFloatFunc_gihb6")
nodes/fragment/14/position = Vector2(-180, 540)
nodes/fragment/15/node = SubResource("VisualShaderNodeBooleanParameter_w0gko")
nodes/fragment/15/position = Vector2(-980, 740)
nodes/fragment/connections = PackedInt32Array(2, 0, 3, 2, 4, 0, 7, 0, 5, 0, 7, 1, 7, 0, 8, 0, 3, 0, 11, 0, 11, 0, 0, 0, 12, 0, 11, 1, 8, 0, 13, 0, 13, 0, 14, 0, 14, 0, 12, 2, 15, 0, 8, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ieyfg"]
load_path = "res://.godot/imported/icon.svg-218a8f2b3041327d8a5756f3a245f83b.s3tc.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kigwi"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("VisualShader_hfj5k")
shader_parameter/TimeScale = 1.0
shader_parameter/IsSelectd = false
shader_parameter/Texture2DParameter = SubResource("CompressedTexture2D_ieyfg")

[sub_resource type="BoxMesh" id="BoxMesh_bqrvh"]

[node name="Character" type="Marker3D" node_paths=PackedStringArray("mesh", "playerController", "character_controller", "camera_marker")]
script = ExtResource("1_480s5")
mesh = NodePath("MeshInstance3D")
playerController = NodePath("PlayerController")
iconTexture = ExtResource("3_1av1x")
character_controller = NodePath("PlayerController/character_controller")
camera_marker = NodePath("CameraMarker")
skill_textures = ExtResource("3_tv1nx")
character_stat = ExtResource("4_6x02c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_6njk1")
surface_material_override/0 = SubResource("ShaderMaterial_kigwi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PlayerController" type="CanvasLayer" parent="."]

[node name="character_controller" parent="PlayerController" instance=ExtResource("4_0ki5f")]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.999938, -0.0111699, 0, 0.0111699, 0.999938, 0, 0, 0, 1, -0.00572103, 2.23346, -0.619449)
mesh = SubResource("BoxMesh_bqrvh")

[node name="CameraMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.97871, 0.764903, 1.77577)

[connection signal="attack" from="PlayerController/character_controller" to="." method="_on_character_controller_attack"]
[connection signal="skill" from="PlayerController/character_controller" to="." method="_on_character_controller_skill"]
[connection signal="ultimate" from="PlayerController/character_controller" to="." method="_on_character_controller_ultimate"]
